force-app/main/default/objects/Associated_Person__c/Associated_Person__c.object-meta.xml
<CustomObject>
    <label>Associated Person</label>
    <nameField>
        <label>Associated Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated People</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>