force-app/main/default/objects/Associated_Person__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <referenceTo>Customer_Profile__c</referenceTo>
    <relationshipName>Child_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>