force-app/main/default/objects/Associated_Person__c/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Submission</label>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>Associated People</relationshipLabel>
    <relationshipName>Associated_People</relationshipName>
    <type>Lookup</type>
</CustomField>