force-app/main/default/objects/Associated_Person__c/fields/Is_Married__c.field-meta.xml
<CustomField>
    <fullName>Is_Married__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Married</label>
    <type>Checkbox</type>
</CustomField>