force-app/main/default/objects/Associated_Person__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child of Both Parents</fullName>
            </value>
            <value>
                <fullName>Child of Person 1</fullName>
            </value>
            <value>
                <fullName>Child of Person 2</fullName>
            </value>
            <value>
                <fullName>Child of Single Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>