force-app/main/default/objects/Associated_Person__c/fields/Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Type__c</fullName>
    <label>Person Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Person</fullName>
            </value>
            <value>
                <fullName>Spouse / Partner</fullName>
            </value>
            <value>
                <fullName>Ex-Spouse / Ex-Partner</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Stepchild</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Stepparent</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Stepsibling</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Aunt / Uncle</fullName>
            </value>
            <value>
                <fullName>Niece / Nephew</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Other Family Member</fullName>
            </value>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Family Friend</fullName>
            </value>
            <value>
                <fullName>Godparent</fullName>
            </value>
            <value>
                <fullName>Godchild</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>